[gd_scene load_steps=12 format=2]

[ext_resource path="res://Jogador.tscn" type="PackedScene" id=1]
[ext_resource path="res://scrips/Arena.gd" type="Script" id=2]
[ext_resource path="res://textura/Font.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scrips/pontos.gd" type="Script" id=4]
[ext_resource path="res://scrips/Camera2D.gd" type="Script" id=5]
[ext_resource path="res://scrips/recorde.gd" type="Script" id=6]
[ext_resource path="res://Inimigo_1.tscn" type="PackedScene" id=7]
[ext_resource path="res://Inimigo_2.tscn" type="PackedScene" id=8]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bloom = 0.3
glow_blend_mode = 0
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 25
font_data = ExtResource( 3 )

[node name="Arena" type="Node2D"]
script = ExtResource( 2 )
inimigos = [ ExtResource( 7 ), ExtResource( 8 ) ]

[node name="Jogador" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.168627, 0.101961, 0.882353, 1 )
position = Vector2( 320, 180 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="timer_spawn_inimigo" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="timer_dificuldade" type="Timer" parent="."]

[node name="UI" type="Node2D" parent="."]
z_index = 20

[node name="Control" type="Control" parent="UI"]
margin_right = 640.0
margin_bottom = 360.0

[node name="pontos" type="Label" parent="UI/Control"]
margin_right = 640.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 2 )
text = "100
"
align = 1
valign = 1
script = ExtResource( 4 )

[node name="recorde" type="Label" parent="UI/Control"]
margin_top = 279.0
margin_right = 640.0
margin_bottom = 359.0
custom_fonts/font = SubResource( 3 )
text = "100
"
align = 1
valign = 1
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 320, 180 )
current = true
script = ExtResource( 5 )

[node name="timer_camera" type="Timer" parent="Camera2D"]

[connection signal="timeout" from="timer_spawn_inimigo" to="." method="_on_timer_spawn_inimigo_timeout"]
[connection signal="timeout" from="timer_dificuldade" to="." method="_on_timer_dificuldade_timeout"]
[connection signal="timeout" from="Camera2D/timer_camera" to="Camera2D" method="_on_timer_camera_timeout"]
